--- a/code/41_results.Rmd
+++ b/code/41_results.Rmd
@@ -1145,62 +1145,58 @@ cat(paste0("- ", sentences, collapse = "\n"))
 fmt <- function(x) scales::number(x, accuracy = 0.01, big.mark = ",")
 fmt_pct <- function(x) scales::percent(x, accuracy = 0.1)
 
+
 # Overall 
 # --- Table 0: mean_est overall ------------------
-att_est_overall <- summ_grid_att |>
+att_est_overall <- all_df_att |>
   summarise(
     n_scen        = n(),
-    mean_est_mean   = mean(mean_est, na.rm = TRUE),
-    mean_est_sd     = sd(mean_est, na.rm = TRUE),
-    mean_est_median = median(mean_est, na.rm = TRUE),
-    mean_est_mad    = mad(mean_est, na.rm = TRUE),
-    mean_est_min    = min(mean_est, na.rm = TRUE),
-    mean_est_max    = max(mean_est, na.rm = TRUE),
-    mean_true       = mean(mean_true, na.rm = TRUE),  # should be ~158 for all
+    est_mean   = mean(est, na.rm = TRUE),
+    est_sd     = sd(est, na.rm = TRUE),
+    est_median = median(est, na.rm = TRUE),
+    est_mad    = mad(est, na.rm = TRUE),
+    est_min    = min(est, na.rm = TRUE),
+    est_max    = max(est, na.rm = TRUE),
+    mean_true       = mean(true, na.rm = TRUE),  # should be ~158 for all
     .groups = "drop"
   )
 fn_save_results(att_est_overall)
 
 # --- Table 1: mean_est descriptives by treatment ---
-att_est_by_treatment <- summ_grid_att |>
+att_est_by_treatment <- all_df_att |>
   group_by(treatment_fct) |>
   summarise(
     n_scen        = n(),
-    mean_est_mean   = mean(mean_est, na.rm = TRUE),
-    mean_est_sd     = sd(mean_est, na.rm = TRUE),
-    mean_est_median = median(mean_est, na.rm = TRUE),
-    mean_est_mad    = mad(mean_est, na.rm = TRUE),
-    mean_est_min    = min(mean_est, na.rm = TRUE),
-    mean_est_max    = max(mean_est, na.rm = TRUE),
-    mean_true       = mean(mean_true, na.rm = TRUE),  # should be ~158 for all
+    est_mean   = mean(est, na.rm = TRUE),
+    est_sd     = sd(est, na.rm = TRUE),
+    est_median = median(est, na.rm = TRUE),
+    est_mad    = mad(est, na.rm = TRUE),
+    est_min    = min(est, na.rm = TRUE),
+    est_max    = max(est, na.rm = TRUE),
+    mean_true       = mean(true, na.rm = TRUE),  # should be ~158 for all
     .groups = "drop"
   )
 fn_save_results(att_est_by_treatment)
 
-gt_att_est <- att_est_by_treatment |>
-  mutate(across(where(is.numeric), fmt)) |>
-  gt() |>
-  tab_header(
-    title    = "ATT: Descriptives of Mean Estimate by Treatment",
-    subtitle = "Each row averages across 27 scenarios; true ATT ≈ 158"
-  ) |>
-  cols_label(
-    treatment_fct   = "Treatment",
-    n_scen          = "N scenarios",
-    mean_est_mean   = "Mean",
-    mean_est_sd     = "SD",
-    mean_est_median = "Median",
-    mean_est_mad    = "MAD",
-    mean_est_min    = "Min",
-    mean_est_max    = "Max",
-    mean_true       = "Mean true ATT"
-  ) |>
-  tab_options(data_row.padding = px(2))
+# --- Table 1: mean_est descriptives by scenario ---
+att_est_by_scenario <- all_df_att |>
+  group_by(treatment_fct, nobs_fct, prop_extreme_fct, magnitude_fct) |>
+  summarise(
+    n_scen        = n(),
+    est_mean   = mean(est, na.rm = TRUE),
+    est_sd     = sd(est, na.rm = TRUE),
+    est_median = median(est, na.rm = TRUE),
+    est_mad    = mad(est, na.rm = TRUE),
+    est_min    = min(est, na.rm = TRUE),
+    est_max    = max(est, na.rm = TRUE),
+    mean_true       = mean(true, na.rm = TRUE),  # should be ~158 for all
+    .groups = "drop"
+  )
+fn_save_results(att_est_by_scenario)
 
-gt_att_est
 
 # --- Table 2a: ATT bias overall descriptives --- 
-att_bias_overall <- summ_grid_att |>
+att_bias_overall <- all_df_att |>
   summarise(
     n_scen          = n(),
     mean_bias       = mean(bias, na.rm = TRUE),
@@ -1218,7 +1214,7 @@ att_bias_overall <- summ_grid_att |>
 fn_save_results(att_bias_overall)
 
 # --- Table 2: bias descriptives by treatment ---
-att_bias_by_treatment <- summ_grid_att |>
+att_bias_by_treatment <- all_df_att |>
   group_by(treatment_fct) |>
   summarise(
     n_scen          = n(),
@@ -1237,123 +1233,148 @@ att_bias_by_treatment <- summ_grid_att |>
 
 fn_save_results(att_bias_by_treatment)
 
-gt_att_bias <- att_bias_by_treatment |>
-  mutate(
-    across(c(mean_bias, sd_bias, median_bias, mad_bias,
-             min_bias, max_bias, mean_abs_bias, median_abs_bias), fmt),
-    prop_neg_bias = fmt_pct(prop_neg_bias)
-  ) |>
-  gt() |>
-  tab_header(
-    title    = "ATT: Descriptives of Bias by Treatment",
-    subtitle = "Bias = mean_est − true ATT; each row averages across 27 scenarios"
-  ) |>
-  cols_label(
-    treatment_fct   = "Treatment",
-    n_scen          = "N scenarios",
-    mean_bias       = "Mean bias",
-    sd_bias         = "SD bias",
-    median_bias     = "Median bias",
-    mad_bias        = "MAD bias",
-    min_bias        = "Min bias",
-    max_bias        = "Max bias",
-    mean_abs_bias   = "Mean |bias|",
-    median_abs_bias = "Median |bias|",
-    n_neg_bias      = "N scen negative",
-    prop_neg_bias   = "% scen negative"
-  ) |>
-  tab_options(data_row.padding = px(2))
+att_bias_by_scenario <- all_df_att |>
+  group_by(treatment_fct, nobs_fct, prop_extreme_fct, magnitude_fct) |>
+  summarise(
+    n_scen          = n(),
+    mean_bias       = mean(bias, na.rm = TRUE),
+    sd_bias         = sd(bias, na.rm = TRUE),
+    median_bias     = median(bias, na.rm = TRUE),
+    mad_bias        = mad(bias, na.rm = TRUE),
+    min_bias        = min(bias, na.rm = TRUE),
+    max_bias        = max(bias, na.rm = TRUE),
+    mean_abs_bias   = mean(abs_bias, na.rm = TRUE),
+    median_abs_bias = median(abs_bias, na.rm = TRUE),
+    n_neg_bias      = sum(bias < 0),
+    prop_neg_bias   = mean(bias < 0),
+    .groups = "drop"
+  )
 
-gt_att_bias
-
-# Save both
-gtsave(gt_att_est,  here::here("results/tbl_att_est_by_treatment.rtf"))
-gtsave(gt_att_bias, here::here("results/tbl_att_bias_by_treatment.rtf"))
+fn_save_results(att_bias_by_scenario)
 
 ```  
 
-```{r plot_att_bias}
-# --- Step 0: build scenario_short ---
-prep_plot_att_bias <- summ_grid_att |>
-  mutate(
-    scenario_short = glue::glue("p={prop_extreme_fct} n={nobs_fct} m={magnitude_fct}")
+```{r plot_att_est_bias}
+# ================================================================
+# ATT ESTIMATE: trends plot
+# ================================================================
+summ_att <- summ_grid |> 
+  filter(model=="ATT") |> 
+  select(-c(mean_model_se, rmse, coverage))
+
+plot_att_est_trends <- ggplot(
+  summ_att,
+  aes(
+    x     = magnitude_fct,
+    y     = mean_est,
+    color = treatment_fct
   )
-
-# --- Step 1: order scenarios by frequency of |bias| > 50 across all treatments ---
-scenario_order_att <- prep_plot_att_bias |>
-  group_by(scenario_short) |>
-  summarise(n_large_bias = sum(abs(bias) > 50, na.rm = TRUE), .groups = "drop") |>
-  arrange(desc(n_large_bias)) |>
-  pull(scenario_short)
-
-# --- Step 2: order treatments by frequency of |bias| > 100 (worst to best) ---
-treatment_order_att <- prep_plot_att_bias |>
-  group_by(treatment_fct) |>
-  summarise(n_large_bias = sum(abs(bias) > 100, na.rm = TRUE), .groups = "drop") |>
-  arrange(desc(n_large_bias)) |>
-  pull(treatment_fct)
-
-# --- Step 3: apply ordering and bias tiers ---
-prep_plot_att_bias_ordered <- prep_plot_att_bias |>
-  mutate(
-    scenario_short = factor(scenario_short, levels = scenario_order_att),
-    treatment_fct  = factor(treatment_fct,  levels = treatment_order_att),
-    bias_tier = case_when(
-      abs(bias) > 500  ~ ">|500|",
-      abs(bias) > 100  ~ ">|100|",
-      TRUE             ~ "≤|100|"
-    ),
-    bias_tier = factor(bias_tier, levels = c("≤|100|", ">|100|", ">|500|"))
-  )
-
-att_y_min <- min(prep_plot_att_bias_ordered$bias, na.rm = TRUE)
-att_y_max <- max(prep_plot_att_bias_ordered$bias, na.rm = TRUE)
-
-# --- Step 4: plot ---
-plot_att_bias_facet <- prep_plot_att_bias_ordered |>
-  ggplot(aes(x = scenario_short, y = bias)) +
-  geom_hline(yintercept = 0, linetype = "dashed", color = "grey30", linewidth = 0.4) +
-  geom_segment(
-    aes(x = scenario_short, xend = scenario_short, y = 0, yend = bias),
-    linewidth = 0.5, color = "grey60"
+) +
+  geom_hline(
+    aes(yintercept = mean_true),
+    linetype = "dashed", color = "grey30", linewidth = 0.4
   ) +
-  geom_point(
-    aes(color = bias_tier),
-    size = 2
+  geom_jitter(
+    width = 0.2,
+    height = 0,
+    size = 3,
+    alpha = 0.7
   ) +
-  scale_color_manual(
-    name   = "|Bias| threshold",
-    values = c(
-      "≤|100|" = "steelblue",
-      ">|100|" = "orange",
-      ">|500|" = "red"
+  facet_grid(
+    nobs_fct ~ prop_extreme_fct,
+    labeller = labeller(
+      nobs_fct         = function(x) paste0("N = ", x),
+      prop_extreme_fct = function(x) paste0("Prop. Extreme = ", x)
     )
   ) +
-  scale_y_continuous(limits = c(att_y_min, att_y_max)) +
-  facet_wrap(
-    ~ treatment_fct, nrow = 2,
-    labeller = labeller(treatment_fct = label_wrap_gen(width = 15))
+  scale_color_manual(
+    name   = "Data Treatment",
+    values = c(
+      "No treatment"                = "#0072B2",
+      "Top-coding"                  = "#E69F00",
+      "Mean-preserved top-coding"   = "#009E73",
+      "Median-preserved top-coding" = "#CC79A7",
+      "Truncation"                  = "#D55E00"
+    ),
+    labels = label_wrap_gen(width = 20)   # wraps legend text
   ) +
   labs(
-    title    = "ATT: Scenario-Level Bias by Treatment",
-    subtitle = "Scenarios ordered by frequency of |bias| > 50; treatments ordered worst to best (left to right, top to bottom)",
-    x        = NULL,
-    y        = "Bias (ATT scale)"
+    title    = "ATT: Scenario-Level Estimates Across Magnitude of Extremes",
+    subtitle = stringr::str_wrap(
+      "Rows = N; Cols = proportion extreme; dashed line = zero bias; points show scenario-level bias",
+      width = 90   # adjust to match your plot width
+    ),
+    x = "Magnitude level",
+    y = "Bias (ATT scale)"
   ) +
-  theme_minimal(base_size = 10) +
+  theme_minimal() +
   theme(
-    panel.grid.major.x  = element_blank(),
-    panel.grid.minor    = element_blank(),
-    axis.text.x         = element_text(angle = 90, hjust = 1, size = 7),
-    strip.text          = element_text(face = "bold", size = 9),
-    legend.position     = "bottom",
-    plot.title          = element_text(face = "bold"),
-    plot.title.position = "plot"
+    legend.position  = "bottom",
+    legend.title     = element_text(face = "bold"),
+    plot.subtitle    = element_text(color = "grey40", size = 9)  # optional styling
   )
 
-plot_att_bias_facet
-ggsave(here::here(paste0("figures/att_bias_lollipop_facet_", dt, ".png")),
-       plot_att_bias_facet, width = 16, height = 8, dpi = 300)
+plot_att_est_trends
+ggsave(here::here(paste0("figures/att_est_trends_", dt, ".png")),
+       plot_att_est_trends, width = 11, height = 7, dpi = 300)
+
+
+# ================================================================
+# ATT BIAS: trends plot
+# ================================================================
+
+plot_att_bias_trends <- ggplot(
+  summ_att,
+  aes(
+    x     = magnitude_fct,
+    y     = bias,
+    color = treatment_fct
+  )
+) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "grey30", linewidth = 0.4) +
+  geom_jitter(
+    width  = 0.2,
+    height = 0,
+    size   = 3,
+    alpha  = 0.7
+  ) +
+  facet_grid(
+    nobs_fct ~ prop_extreme_fct,
+    labeller = labeller(
+      nobs_fct         = function(x) paste0("N = ", x),
+      prop_extreme_fct = function(x) paste0("Prop. Extreme = ", x)
+    )
+  ) +
+  scale_color_manual(
+    name   = "Data Treatment",
+    values = c(
+      "No treatment"                = "#0072B2",
+      "Top-coding"                  = "#E69F00",
+      "Mean-preserved top-coding"   = "#009E73",
+      "Median-preserved top-coding" = "#CC79A7",
+      "Truncation"                  = "#D55E00"
+    ),
+    labels = label_wrap_gen(width = 20)   # wraps legend text
+  ) +
+  labs(
+    title    = "ATT: Scenario-Level Bias Across Magnitude of Extremes",
+    subtitle = stringr::str_wrap(
+      "Rows = N; Cols = proportion extreme; dashed line = zero bias; points show scenario-level bias",
+      width = 90   # adjust to match your plot width
+    ),
+    x = "Magnitude level",
+    y = "Bias (ATT scale)"
+  ) +
+  theme_minimal() +
+  theme(
+    legend.position  = "bottom",
+    legend.title     = element_text(face = "bold"),
+    plot.subtitle    = element_text(color = "grey40", size = 9)  # optional styling
+  )
+
+plot_att_bias_trends
+ggsave(here::here(paste0("figures/att_bias_trends_", dt, ".png")),
+       plot_att_bias_trends, width = 11, height = 7, dpi = 300)
 
 ```
 
@@ -1365,10 +1386,7 @@ ggsave(here::here(paste0("figures/att_bias_lollipop_facet_", dt, ".png")),
 
 
 ```{r aov_bias}
-
-
 # Type III ANOVA with Eta² and Partial Eta² for Gamma Bias
-
 
 # A) factorial ANOVA on gamma bias (at rep-level, per meeting with Tsai)
 # Load required packages
@@ -1778,6 +1796,95 @@ ggsave(here::here(paste0("figures/effect_sizes_", dt, ".png")),
 
 ```{r aov_att_absbias}
 # D) Do anova on ATT absolute bias, not bias, at the replicate level.
+# Type III ANOVA with Eta² and Partial Eta² for Gamma Bias
+
+# A) factorial ANOVA on gamma bias (at rep-level, per meeting with Tsai)
+
+# Set contrasts for Type III SS (m!)
+options(contrasts = c("contr.sum", "contr.poly"))
+
+
+# 1: Fit the model
+
+model_att <- aov(
+  abs_bias ~ treatment_fct * nobs_fct * prop_extreme_fct * magnitude_fct, 
+  data = all_df_att)
+
+
+# Step 2: Type III Sum of Squares ANOVA Table
+type3_anova_att <- car::Anova(model_att, type = "III")
+
+
+# 3: Comb. table ===================================================
+# Type III SS + Effect Sizes
+
+# Extract Type III results
+type3_df_att <- type3_anova_att %>%
+  as.data.frame() %>%
+  tibble::rownames_to_column("Term") %>%
+  filter(Term != "Residuals")
+
+eta2_regular_att <- effectsize::eta_squared(type3_anova_att, partial=FALSE)
+eta2_partial_att <- effectsize::eta_squared(type3_anova_att, partial=TRUE)
+
+# Extract regular eta²
+eta2_reg_df_att <- eta2_regular_att %>%
+  as.data.frame() %>%
+  select(Parameter, Eta2)
+
+# Extract partial eta²
+eta2_part_df_att <- eta2_partial_att %>%
+  as.data.frame() %>%
+  select(Parameter, Eta2_partial)
+
+# Tried both of these below, came out the same.
+# eta2_lsr <- lsr::etaSquared(model, type=3)
+# eta2_descTools <- DescTools::EtaSq(model, type=3)
+
+# Combine everything - simplified version (point estimates only)
+options(scipen=999)
+combined_table_att <- type3_df_att %>%
+  left_join(eta2_reg_df_att, by = c("Term" = "Parameter")) %>%
+  left_join(eta2_part_df_att, by = c("Term" = "Parameter")) %>%
+  mutate(
+    `Sum Sq` = round(`Sum Sq`, 6),
+    `F value` = round(`F value`, 2),
+    `Pr(>F)` = format.pval(`Pr(>F)`, digits = 3, eps = 0.001),
+    Eta2 = round(Eta2, 5),
+    Eta2_partial = round(Eta2_partial, 5),
+    # Add interpretation column (handle NAs for intercept)
+    Interp_pes = case_when(
+      is.na(Eta2_partial) ~ "N/A",           # Handle NAs first
+      Eta2_partial < 0.01 ~ "Negligible",
+      Eta2_partial < 0.06 ~ "Small",
+      Eta2_partial < 0.14 ~ "Medium",
+      TRUE ~ "Large"
+    ),
+    Interp_es = case_when(
+      is.na(Eta2) ~ "N/A",           # Handle NAs first
+      Eta2 < 0.01 ~ "Negligible",
+      Eta2 < 0.06 ~ "Small",
+      Eta2 < 0.14 ~ "Medium",
+      TRUE ~ "Large")
+  ) %>%
+  select(Term, Df, `Sum Sq`, `F value`, `Pr(>F)`, Eta2, Interp_es, Eta2_partial, Interp_pes)  %>%
+  arrange(desc(`F value`))
+
+print(combined_table_att)
+
+# 4: Export ===================================================
+# avoid .csv having scientific notation: 
+combined_table_att_export <- combined_table_att |>
+  mutate(
+    `Sum Sq`     = formatC(`Sum Sq`,     format = "f", digits = 6, big.mark = ","),
+    `F value`    = formatC(`F value`,    format = "f", digits = 2),
+    Eta2         = formatC(Eta2,         format = "f", digits = 5),
+    Eta2_partial = formatC(Eta2_partial, format = "f", digits = 5)
+  )
+
+write.csv(combined_table_att_export,
+          here::here(paste0("results/aov_att_type3_", dt, ".csv")),
+          row.names = FALSE)
 ```
 
 
